--- a/1._intro_files/1._First_Dependency/package.json
+++ b/1._intro_files/1._First_Dependency/package.json
@@ -1,4 +1,8 @@
 {
+    "scripts": {
+        "start": "node ./peopleParty.js",
+        "list": "ls"
+    },
     "dependencies": {
         "faker": "4.1.0"
     }
