Setup basic knex and added dbcredentials to .gitignore

--- a/4._Express/package.json
+++ b/4._Express/package.json
@@ -1,5 +1,19 @@
 {
+    "name": "firstexpressapi",
+    "version": "1.0.0",
+    "description": "bla",
+    "main": "index.js",
+    "scripts": {
+        "test": "first Express API"
+    },
     "dependencies": {
         "express": "4.17.1"
-    }
+    },
+    "keywords": [
+        "API",
+        "CRUD",
+        "Express"
+    ],
+    "author": "Mathilde",
+    "license": "ISC"
 }
