--- a/5._Auth/server/package.json
+++ b/5._Auth/server/package.json
@@ -1,6 +1,38 @@
 {
-    "dependencies": {
-        "knex": "0.20.13",
-        "mysql": "2.18.1"
-    }
+  "name": "server",
+  "version": "1.0.0",
+  "description": "",
+  "main": "app.js",
+  "scripts": {
+    "migrate:latest": "knex migrate:latest",
+    "migrate:make": "knex migrate:make",
+    "migrate:rollback": "knex migrate:rollback",
+    "seed:make": "knex seed:make",
+    "seed:run": "knex seed:run",
+    "start-dev": "PORT=9090 nodemon app.js",
+    "start-prod": "PORT=80 node app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cross-env": "^7.0.2",
+    "express": "^4.17.1",
+    "express-rate-limit": "^5.1.1",
+    "knex": "^0.20.13",
+    "mysql": "^2.18.1",
+    "objection": "^2.1.3"
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^3.0.0",
+    "eslint-plugin-standard": "^4.0.1"
+  }
 }
