--- a/inrainorshine/package.json
+++ b/inrainorshine/package.json
@@ -2,7 +2,7 @@
   "name": "inrainorshine",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://inrainorshine.mathildeoldorf.dk/",
+  "homepage": "https://mathildeoldorf.github.io/inrainorshine_weatherapp",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
@@ -20,7 +20,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "publish": "NODE_DEBUG=gh-pages node ghpages.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -36,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.2.0"
   }
 }
